--- a/MintClientControl/Pages/Index.razor
+++ b/MintClientControl/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Mint Control Panel</h1>
 
-Welcome to your new app.
+Welcome to your the control panel please log in.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
