--- a/MintClientControl/Shared/NavMenu.razor
+++ b/MintClientControl/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data MVVM
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FunctionPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Function
+            </NavLink>
+        </li>
     </ul>
 </div>
 
