--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -1,11 +1,12 @@
 ﻿@page "/FunctionPage"
 @using  MintClientControl.ViewModels
+@using MintClientControl.Components
 @inherits FetchDataBase
 
 <h3>FunctionView</h3>
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (ViewModel.Functions == null)
+@if (ViewModel.FunctionList == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -14,19 +15,27 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>FuncId</th>
-                <th>UserId</th>
-                <th>FuncRights</th>
+                <th>Functions</th>
+                <th>Description</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var function in ViewModel.Functions)
+            @foreach (var function in ViewModel.FunctionList)
             {
                 <tr>
                     <td><button @onclick="@(e => ViewModel.SendCommand(function.Command))">@function.Title</button></td>
+                    <td>@function.Title</td>
+                    <td><button @onclick="@(e => ViewModel.DeleteItem(function))">Remove</button></td>
                 </tr>
             }
         </tbody>
     </table>
-    
+
 }
+<td><button @onclick="@(e => ViewModel.OpenDialog())">New Button</button></td>
+@if (ViewModel.AddDialog)
+{
+    <ModalDialog />
+}
+
