--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -33,9 +33,29 @@ else
     </table>
 
 }
-<td><button @onclick="@(e => ViewModel.OpenDialog())">New Button</button></td>
-@if (ViewModel.AddDialog)
-{
-    <ModalDialog />
+<button @onclick="() => modal.Open()">Open Modal</button>
+<ModalDialog @ref="modal">
+    <Title>This is a <em>Title!</em></Title>
+    <Body>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Omnes enim iucundum motum, quo sensus hilaretur.
+            <i>Quis istud possit, inquit, negare?</i>
+            <mark>Ego vero isti, inquam, permitto.</mark> Duo Reges: constructio interrete.
+        </p>
+        <dl>
+            <dt><dfn>Stoici scilicet.</dfn></dt>
+            <dd>An hoc usque quaque, aliter in vita?</dd>
+            <dt><dfn>Erat enim Polemonis.</dfn></dt>
+            <dd>Quod cum accidisset ut alter alterum necopinato videremus, surrexit statim.</dd>
+        </dl>
+    </Body>
+    <Footer>
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => modal.Close()">Close</button>
+    </Footer>
+</ModalDialog>
+
+@code {
+    private ModalDialog modal { get; set; }
 }
 
