--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -37,20 +37,17 @@ else
 <ModalDialog @ref="modal">
     <Title>This is a <em>Title!</em></Title>
     <Body>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Omnes enim iucundum motum, quo sensus hilaretur.
-            <i>Quis istud possit, inquit, negare?</i>
-            <mark>Ego vero isti, inquam, permitto.</mark> Duo Reges: constructio interrete.
-        </p>
-        <dl>
-            <dt><dfn>Stoici scilicet.</dfn></dt>
-            <dd>An hoc usque quaque, aliter in vita?</dd>
-            <dt><dfn>Erat enim Polemonis.</dfn></dt>
-            <dd>Quod cum accidisset ut alter alterum necopinato videremus, surrexit statim.</dd>
-        </dl>
+        <div class="form-group">
+            <label for="usr">Title:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Command:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
     </Body>
     <Footer>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" @onclick="@(e => ViewModel.AddItem())" class="btn btn-primary">Save changes</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => modal.Close()">Close</button>
     </Footer>
 </ModalDialog>
