--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -4,7 +4,7 @@
 @inherits FetchDataBase
 
 <h3>FunctionView</h3>
-<p>This component demonstrates fetching data from the server.</p>
+<p>@ViewModel.Error</p>
 
 @if (ViewModel.FunctionList == null)
 {
@@ -39,15 +39,15 @@ else
     <Body>
         <div class="form-group">
             <label for="usr">Title:</label>
-            <input type="text" class="form-control" id="usr">
+            <input type="text" class="form-control" id="usr" @bind="@ViewModel.AddData.Title">
         </div>
         <div class="form-group">
             <label for="usr">Command:</label>
-            <input type="text" class="form-control" id="usr">
+            <input type="text" class="form-control" id="usr" @bind="@ViewModel.AddData.Command">
         </div>
     </Body>
     <Footer>
-        <button type="button" @onclick="@(e => ViewModel.AddItem())" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-primary" @onclick="@(e => { ViewModel.AddItem(); modal.Close(); })">Save changes</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => modal.Close()">Close</button>
     </Footer>
 </ModalDialog>
