Added check with user name for correct functions

--- a/MintClientControl/Pages/Index.razor
+++ b/MintClientControl/Pages/Index.razor
@@ -7,7 +7,7 @@
         <p>Welcome to your new app.</p>
     </Authorized>
     <NotAuthorized>
-        <p>Not Authorized</p>
+        <p>Not Logged in please authorize</p>
     </NotAuthorized>
 </AuthorizeView>
 
