--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -3,7 +3,16 @@
 @using MintClientControl.Components
 @inherits FetchDataBase
 
-<h3>FunctionView</h3>
+<AuthorizeView>
+    <Authorized>
+        <h1>Hello, @context.User.Identity.Name !</h1>
+
+        <p>Welcome to your new application.</p>
+    </Authorized>
+    <NotAuthorized>
+        <p>Not Logged in please authorize to see your function buttons</p>
+    </NotAuthorized>
+</AuthorizeView>
 <p>@ViewModel.Error</p>
 
 @if (ViewModel.FunctionList == null)
