--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -13,7 +13,7 @@
         <p>Not Logged in please authorize to see your function buttons</p>
     </NotAuthorized>
 </AuthorizeView>
-<p>@ViewModel.Error</p>
+<p>@ViewModel.Notification</p>
 
 @if (ViewModel.FunctionList == null)
 {
