--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -1,7 +1,7 @@
 ﻿@page "/FunctionPage"
 @using  MintClientControl.ViewModels
 @using MintClientControl.Components
-@inherits FetchDataBase
+@inherits FunctionViewBase
 
 <AuthorizeView>
     <Authorized>
