--- a/MintClientControl/Shared/LoginDisplay.razor
+++ b/MintClientControl/Shared/LoginDisplay.razor
@@ -6,11 +6,11 @@
 
 <AuthorizeView>
     <Authorized>
-        Hello, @context.User.Identity.Name!
-        <button class="nav-link btn btn-link" @onclick="BeginSignOut">Log out</button>
+        Hello, @context.User.Identity.Name! &nbsp;&nbsp;
+        <div class="loginout" @onclick="BeginSignOut">Log out</div>
     </Authorized>
     <NotAuthorized>
-        <a href="authentication/login">Log in</a>
+        <a href="authentication/login" class="loginout">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
 
