--- a/MintClientControl/Shared/MainLayout.razor.css
+++ b/MintClientControl/Shared/MainLayout.razor.css
@@ -1,7 +1,9 @@
 .page {
+    background-color: #000000;
     position: relative;
     display: flex;
     flex-direction: column;
+    color: #ffffff;
 }
 
 .main {
@@ -13,8 +15,8 @@
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: #171F5D;
+    border-bottom: 1px solid #f7f7f7;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
