--- a/MintClientControl/Shared/NavMenu.razor.css
+++ b/MintClientControl/Shared/NavMenu.razor.css
@@ -4,7 +4,9 @@
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #171F5D;
+    //background-color: rgba(0,0,0,0.4);
+    border-bottom: 1px solid #f7f7f7;
 }
 
 .navbar-brand {
@@ -48,10 +50,6 @@
 .nav-item ::deep a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
-}
-
-.navbar-dark {
-    background-color: #6441a5;
 }
 
 @media (min-width: 641px) {
