--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -32,11 +32,12 @@ else
         <tbody>
             @foreach (var function in ViewModel.FunctionList)
             {
-                <tr>
-                    <td><button class="btn btn-normal" @onclick="@(e => ViewModel.SendCommand(function.Command))">@function.Title</button></td>
-                    <td>@function.Title</td>
-                    <td><button class="btn btn-remove" @onclick="@(e => ViewModel.DeleteItem(function))">Remove</button></td>
-                </tr>
+            <tr>
+                <td><button class="btn btn-normal" @onclick="@(e => ViewModel.SendCommand(function.Command))">@function.Title</button></td>
+                <td>@function.Title</td>
+                <td><button class="btn btn-normal" @onclick="@(e => { ViewModel.EditItem(function); modal.Open(); })">Edit</button></td>
+                <td><button class="btn btn-remove" @onclick="@(e => ViewModel.DeleteItem(function))">Remove</button></td>
+            </tr>
             }
         </tbody>
 
@@ -44,7 +45,7 @@ else
 
 }
 <br />
-    <button class="btn btn-normal" @onclick="() => modal.Open()">Open Modal</button>
+    <button class="btn btn-normal" @onclick="@(e => { ViewModel.CreateItem(); modal.Open(); })">Create function</button>
     <ModalDialog @ref="modal">
         <Title>Create your function button:</Title>
         <Body>
