--- a/MintClientControl/Pages/Index.razor
+++ b/MintClientControl/Pages/Index.razor
@@ -2,12 +2,12 @@
 
 <AuthorizeView>
     <Authorized>
-        <h1>Hello, @context.User.Identity.Name !</h1>
+        <h1>Hello, @context.User.Identity.Name</h1>
 
-        <p>Welcome to your new app.</p>
+        <p>Welcome to Mint Stream</p>
     </Authorized>
     <NotAuthorized>
-        <p>Not Logged in please authorize</p>
+        <p>Oops. You're not logged in yet. Please log in.</p>
     </NotAuthorized>
 </AuthorizeView>
 
