--- a/MintClientControl/Views/FunctionView.razor
+++ b/MintClientControl/Views/FunctionView.razor
@@ -5,7 +5,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <h1>Hello, @context.User.Identity.Name !</h1>
+        <h1>Hello, @context.User.Identity.Name</h1>
 
         <p>Welcome to Mint Stream</p>
     </Authorized>
@@ -21,6 +21,7 @@
 }
 else
 {
+<div class="scrollbar">
     <table class="table">
         <thead>
             <tr>
@@ -32,19 +33,22 @@ else
         <tbody>
             @foreach (var function in ViewModel.FunctionList)
             {
-            <tr>
-                <td><button class="btn btn-normal" @onclick="@(e => ViewModel.SendCommand(function.Command))">@function.Title</button></td>
-                <td>@function.Title</td>
-                <td><button class="btn btn-normal" @onclick="@(e => { ViewModel.EditItem(function); modal.Open(); })">Edit</button></td>
-                <td><button class="btn btn-remove" @onclick="@(e => ViewModel.DeleteItem(function))">Remove</button></td>
-            </tr>
+                <tr>
+                    <td><button class="btn btn-normal" @onclick="@(e => ViewModel.SendCommand(function.Command))">@function.Title</button></td>
+                    <td>@function.Title</td>
+                    <td>
+                        <button class="btn btn-normal" @onclick="@(e => { ViewModel.EditItem(function); modal.Open(); })">Edit</button>&nbsp;&nbsp;
+                        <button class="btn btn-remove" @onclick="@(e => ViewModel.DeleteItem(function))">Remove</button>
+                    </td>
+                </tr>
             }
         </tbody>
 
     </table>
+    </div>
 
-}
-<br />
+    }
+    <br />
     <button class="btn btn-normal" @onclick="@(e => { ViewModel.CreateItem(); modal.Open(); })">Create function</button>
     <ModalDialog @ref="modal">
         <Title>Create your function button:</Title>
@@ -65,7 +69,7 @@ else
     </ModalDialog>
 
 
-@code {
-    private ModalDialog modal { get; set; }
-}
+    @code {
+private ModalDialog modal { get; set; }
+    }
 
